syntax = "proto3";

package com.cognite.client.dto;

import "google/protobuf/struct.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

/*
A SequenceColumn describes the data that is contained in the sequence rows.
 */
message SequenceColumn {
    enum ValueType {
        DOUBLE = 0;
        STRING = 1;
        LONG = 2;
    }

    string external_id = 1;
    optional string name = 2;
    optional string description = 3;
    ValueType value_type = 4;
    map<string, string> metadata = 5;
    optional int64 created_time = 6;
    optional int64 last_updated_time = 7;
}

/*
The SequenceRow host all the data for a single row in a sequence.
 */
message SequenceRow {
    int64 row_number = 1;
    repeated google.protobuf.Value values = 2;
}

/*
The sequence header. The header contains common metadata for all rows (SequenceBody) in a sequence.
 */
message SequenceMetadata {
    optional string external_id = 1;
    optional int64 id = 2;
    optional string name = 3;
    optional string description = 4;
    optional int64 asset_id = 5;
    map<string, string> metadata = 6;
    repeated SequenceColumn columns = 7;
    optional int64 created_time = 8;
    optional int64 last_updated_time = 9;
    optional int64 data_set_id = 10;
}

/*
SequenceBody encapsulates the main data payload (the rows and columns) of a sequence.
 */
message SequenceBody {
    optional string external_id = 1;
    optional int64 id = 2;
    repeated SequenceColumn columns = 3;
    repeated SequenceRow rows = 4;
}